Fix portfolio section overlapping the scrolling skills marquee line

--- a/style.css
+++ b/style.css
@@ -878,7 +878,7 @@ hr {
   /* height: 100vh; */
   width: 100%;
   background-color: #e4c1f9;
-  margin: -45px 0 0 0;
+  margin: 60px 0 0 0;
 }
 .stop-spinning {
   animation: none;
